--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -88,31 +88,30 @@
 
         <div class="album py-5 bg-light">
             <div class="container">
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+               <div calss = "card-columns">
+                   {% for designer in designers %}
+                   <div calss ="card mb-4 shadow-sm">
+                       <!--image-->
+                       {%if designer.image.%}
+                       <img src="{{designer.image.url}}" class="card-img-top" alt="Designer_Image">
+                       {%else%}
+                       <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                                <title>Placeholder</title>
+                                <title>Dreamary</title>
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                                    dy=".3em">Profile</text>
+                        </svg>
+                       {% endif %}
+                       <div class="card-body">
+                           <h4 class="card-title"> {{designer.name}} </h4>
+                           <h6 class="card-text"> {{designer.address}} </h6>
+                           <hr>
+                           <p calss="card-text"> {{designer.description}} </p>
+                       </div>
+                   </div>
+                   {% endfor %}
+               </div>                 
             </div>
         </div>
     </main>
