--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -72,6 +72,11 @@
                 <img src="{% static 'images/드리머리로고.png' %}" width="35" height="35" alt="드리머리로고.png">
                 <label class="navbar-brand align-self-center">Dreamary</label>
             </a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="{% url 'new' %}"> 디자이너 등록하기</a>
+                </div>
+            </div>
         </div>
     </header>
 
